# VulkanSetup

./: CMakeLists.txt  README.md
shader/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/half/: half.hpp
src/imgui/: imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_widgets.cpp
src/imgui_file_dialog/: ImGuiFileDialogConfig.h
src/pipelines/: brusher.cpp  brusher.hpp  parallel_coordinates_renderer.cpp  parallel_coordinates_renderer.hpp
src/structures/: array_struct.hpp  attributes.hpp  brushes.hpp  buffer_info.hpp  c_file.hpp  commandline_parser.hpp  data.hpp  dataset_convert_data.hpp  datasets.hpp  descriptor_set_storage.hpp  drawlists.hpp  file_loader.hpp  frame_limiter.hpp  globals.cpp  image_info.hpp  imgui_globals.hpp  laod_behaviour.hpp  logger.hpp  netcdf_file.hpp  open_filepaths.hpp  persistent_samplers.hpp  rendering_structs.hpp  settings_manager.hpp  stager.hpp  sys_info.hpp  texture_storage.hpp  vk_context.hpp  workbench_base.hpp
src/util/: brush_util.hpp  data_util.hpp  dataset_util.cpp  dataset_util.hpp  drawlist_util.hpp  file_util.hpp  glboal_descriptor_set_util.cpp  global_descriptor_set_util.hpp  imgui_util.hpp  memory_view.hpp  ranges.hpp  util.hpp  vk_initializers.hpp  vk_util.hpp  vma_initializers.hpp  vma_util.hpp  workbenches_util.cpp
src/workbenches/: data_workbench.cpp  data_workbench.hpp  parallel_coordinates_workbench.cpp  parallel_coordinates_workbench.hpp
